# connect4-ai

./: .gitignore  BitBoard.py  Board.py  PlayFromPosition.py  PlayFromPositionKiStarting.py  PlayHumanVsHuman.py  VisualGame.py  config.py  minimax.py  negamax.py  negamax_ab_move_ordering.py  negamax_alpha_beta.py  readme.md  requirements.txt  rootConfig.py  rootPath.py
c++/: BitBoard.cpp  BitBoard.h  CMakeLists.txt  TranspositionTable.cpp  TranspositionTable.h  commands.txt  negamax.cpp
cTest/: cTest.py
players/: HumanPlayer.py  KiPlayer.py
solvers/: minimax.py  negamax.py  negamax_alpha_beta.py  negamax_alpha_beta_move_ordering.py  negamax_with_bitboard.py  negamax_with_c_solver.py  negamax_with_c_transpositionTable.py
tests/: MeasurementProcess.py  config.py  eavaluateMeasurements.py  evaluationOverview.py  finalMeasuerment.py  importTestBoards.py  measurements.py  testMinimax.py  testNegamax.py  testSolver.py
tests/measurements/: 1_end-easy_v0  1_end-easy_v1  1_end-easy_v2  1_end-easy_v3  1_end-easy_v4  1_end-easy_v5  1_end-easy_v6  2_middle-easy_v0  2_middle-easy_v1  2_middle-easy_v2  2_middle-easy_v3  2_middle-easy_v4  2_middle-easy_v5  2_middle-easy_v6  3_middle-medium_v5  3_middle-medium_v6  4_begin-easy_v5  4_begin-easy_v6  5_begin-medium_v6
tests/measurements/evaluations/: eval_v0  eval_v1  eval_v2  eval_v3  eval_v4  eval_v5  eval_v6
